--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   intl: ^0.20.0
+  flutter_bloc: ^8.1.6
+  bloc: ^8.1.0
+  equatable: ^2.0.7
+
 
 dev_dependencies:
   flutter_test:
